Beslutter oversikt fix (#555)
* Fix tilgang for beslutter oversikt